--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,3 +16,10 @@ body{
 #container h1{
     font-size: 20px;
 }
+#cabecera{
+    background: red;
+    color: white;
+    font-weight: bold;
+    margin: 0%;
+    padding: 0.5em;
+}
