cambie la cabecera y el color del css del body

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,7 @@ body{
     text-align: center;
     font-family: 'Times New Roman';
     font-size: 16px;
-    color:red;
+    color:blue;
     margin:0;
     padding:0;
 }
